--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <select id="month-select"></select>
     </label>
     <button onclick="renderCalendar()">달력 보기</button>
-    <a href="manage.html">일정 및 공휴일 관리</a>
+    <a href="add_event.html">일정 및 공휴일 관리</a>
   </div>
 
   <div id="calendar"></div>
